fix button alignment on secondary modal

--- a/src/components/secondary-state-modal/_secondary-state-modal.scss
+++ b/src/components/secondary-state-modal/_secondary-state-modal.scss
@@ -6,7 +6,6 @@
     display: flex;
     flex-direction: column;
     height: auto;
-    // justify-content: center;
     margin-top: 1rem;
     min-height: 100%;
     overflow-y: auto;
@@ -138,6 +137,13 @@
       }
       &__footer p {
         margin: 0 !important;
+      }
+      .columns-4 {
+        display: flex;
+        flex-direction: column;
+        .button {
+          margin-top: auto;
+        }
       }
     }
 
